objects/NAICS_Lookup__mdt/NAICS_Lookup__mdt.object-meta.xml
<CustomObject>
    <description>Reference table mapping D&amp;B NAICS codes to NAICS industry descriptions across all four hierarchy levels (Sector, Subsector, Industry Group, Industry).</description>
    <label>NAICS Lookup</label>
    <pluralLabel>NAICS Lookups</pluralLabel>
</CustomObject>