objects/NAICS_Lookup__mdt/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <description>Required. Stores 2–5 digit code.</description>
    <inlineHelpText>Required. Stores 2–5 digit code.</inlineHelpText>
    <label>NAICS Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>