objects/NAICS_Lookup__mdt/fields/NAICS_Description__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Description__c</fullName>
    <description>Required. Full description text.</description>
    <inlineHelpText>Required. Full description text.</inlineHelpText>
    <label>NAICS Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>