objects/NAICS_Lookup__mdt/fields/NAICS_Level__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Level__c</fullName>
    <description>Required. 2=Sector, 3=Subsector, 4=Industry Group, 5=Industry.</description>
    <inlineHelpText>Required. 2=Sector, 3=Subsector, 4=Industry Group, 5=Industry.</inlineHelpText>
    <label>NAICS Level</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>